[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lut-estimator"
version = "0.1.0"
description = "Estimate a 3D LUT from before/after image pairs and apply it to target images."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "haruk" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lut-estimator = "lut_estimator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
